# code

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml  todo.org  todo.org_archive
.vocode/: config.yaml
.vocode/skills/current_date/: SKILL.md
code/: settings.py
code/graph/: graph.py  models.py
docs/: index.md
docs/api/: settings.md
docs/concepts/: tools.md  workflows.md
src/vocode/: __init__.py  commands.py  diagnostics.py  graph.py  logger.py  models.py  project.py  proto.py  settings.py  settings_loader.py  skills.py  state.py  tasklist.py  testing.py  tools.py
src/vocode/config_templates/: config_template.yaml
src/vocode/graph/: __init__.py  graph.py  models.py
src/vocode/know/: __init__.py  project.py  tools.py
src/vocode/lib/: threads.py  validators.py
src/vocode/mcp/: manager.py  proxy.py
src/vocode/patch/: __init__.py  patch.py  (+1 more)
tests/: conftest.py  fakes.py  test_apply_patch_tool.py  test_autocomplete_rpc.py  test_buf.py  test_child_workflows_preprocessor.py  test_diagnostics.py  test_diff_preprocessor.py  test_exec_executor.py  test_exec_tool.py  test_file_state_executor.py  test_file_state_preprocessor.py  test_fileread_executor.py  test_fileread_preprocessor.py  test_graph.py  test_llm_executor.py  test_mcp.py  test_patch_format.py  test_preprocessor_mode.py  test_preprocessor_system_details.py  test_preprocessors_string_inject.py  test_proc_docker_shell_runner.py  test_proc_local_backend.py  test_proc_manager.py  test_proc_shell_manager.py  test_proc_shell_runner.py  test_project.py  test_project_packets.py  test_project_scm.py  test_result_executor.py  test_run_agent_executor.py  test_runner.py  test_runner_tool_concurrency.py  test_settings_loader.py  test_settings_tool_auto_approve.py  test_shell_persistent.py  test_skills.py  test_stacked_runner.py  test_start_workflow_executor.py  test_task_tool.py  (+4 more)
tests/fixtures/: mcp_echo_server.py  uistream.py
tools/: coder.yml  simplecli.py
(+92 files in other folders)
